[gd_scene load_steps=3 format=3 uid="uid://u7wcdasskcgs"]

[ext_resource type="Script" path="res://Autoloads/settings.gd" id="1_67mfn"]
[ext_resource type="Texture2D" uid="uid://drnvs3dkkfcqs" path="res://art assets/sound.png" id="2_mcv2t"]

[node name="Settings" type="CanvasLayer"]
layer = 5
script = ExtResource("1_67mfn")

[node name="HSlider" type="HSlider" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 64.0
offset_top = 17.0
offset_right = 403.0
offset_bottom = 33.0

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 111.0
offset_bottom = 87.0

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 5.0
offset_right = 58.0
offset_bottom = 45.0
texture_normal = ExtResource("2_mcv2t")
ignore_texture_size = true
stretch_mode = 0

[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
